# Execution_agent

workelate_system/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
workelate_system/app/: main.py
workelate_system/app/agent/: executor.py  memory.py  planner.py  runner.py  tracer.py
workelate_system/app/api/: routes.py  types.py
workelate_system/app/core/: config.py  ids.py  logging.py
workelate_system/app/db/: models.py  repo.py  session.py
workelate_system/app/llm/: json_parse.py  prompts.py  router.py  schemas.py
workelate_system/app/tools/: doc_writer.py  metrics.py  registry.py
workelate_system/workelate_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
